--- a/blocks/info/__subtitle/info__subtitle.css
+++ b/blocks/info/__subtitle/info__subtitle.css
@@ -1,17 +1,14 @@
 .info__subtitle {
-  width: 336px;
+  font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  font-weight: 400;
   margin: 16px 0 0;
 }
 
 @media screen and (max-width: 880px) {
   .info__subtitle {
-    max-width: 320px;
     font-size: 14px;
     line-height: 17px;
-    margin-top: 14px;
-    text-align: center;
+    margin: 14px auto 0;
   }
 }
