--- a/blocks/info/__title/info__title.css
+++ b/blocks/info/__title/info__title.css
@@ -1,5 +1,6 @@
 .info__title {
-  max-width: 294px;
+  font-family: Inter;
+  font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
