--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,14 +1,25 @@
 .popup {
-  margin: auto;
-  border-radius: 10px;
+  display: none;
   position: fixed;
   flex-direction: column;
   justify-content: center;
-  display: none;
+  border-radius: 10px;
   top: 0;
-  bottom: 0;
   left: 0;
+  bottom: 0;
   right: 0;
+  margin: auto;
+}
+
+.popup::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #000;
+  opacity: 0.5;
 }
 
 @media screen and (max-width: 880px) {
