--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -4,3 +4,10 @@
   line-height: 22px;
   margin: 0;
 }
+
+@media screen and (max-width: 880px) {
+  .footer__text {
+  font-size: 14px;
+  line-height: 17px;
+  }
+}
