--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,14 @@
 .header__logo {
   width: 142px;
   height: 33px;
+  padding-bottom: 40px;
 }
 
 @media screen and (max-width: 880px) {
   .header__logo {
-    padding-left: 19px;
+    width: 103.74px;
+    height: 24.4px;
+    padding-left: 27px;
+    padding-bottom: 30.6px;
   }
 }
