--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,14 @@
 .header {
+  display: flex;
+  box-sizing: border-box;
   max-width: 880px;
-  height: 74px;
   margin: 45px auto 0;
-  box-shadow: inset 0px -1px 0px 0px #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media screen and (max-width: 880px) {
   .header {
     max-width: 320px;
-    height: 56px;
     margin: 28px auto 0;
   }
 }
