--- a/blocks/info/__title/info__title.css
+++ b/blocks/info/__title/info__title.css
@@ -1,6 +1,6 @@
 .info__title {
-  font-family: Inter;
-  font-style: normal;
+  text-align: center;
+  width: 294px;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
@@ -9,6 +9,7 @@
 
 @media screen and (max-width: 880px) {
   .info__title {
+    width: 189px;
     font-size: 27px;
     line-height: 33px;
     margin: 0 auto;
