--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.popup__input {
+.popup__form {
   margin: auto;
   padding-bottom: 37px;
   padding-left: 0;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 880px) {
-  .popup__input {
+  .popup__form {
     width: 282px;
     padding-bottom: 0;
   }
