--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -8,7 +8,11 @@
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 2px;
-  margin-left: 286px;
+  margin-left: 244px;
+  transition: .3s;
+  background-image: url(../../../images/+.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .profile__button:hover {
@@ -19,7 +23,5 @@
   .profile__button {
     margin: 36px auto 0;
     width: 282px;
-    background-size: cover;
-    background-repeat: no-repeat;
   }
 }
